--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./scripts.js"></script>
-</body>
-</html>
-<!--
-     inserindo o arquivo script.js no index.html 
-<body>
-    <script src="./scripts.js"></script>
-</body> 
--->
+<script>
+    // variáveis e tipos de dados
+    // declaração or declaration
+    var name
+
+    // assignment or atribuição de valores
+    name = "Lucas"
+
+    // que tipo de dado foi colocado na variável
+
+    console.log(typeof name)
+
+    // informações desagrupadas
+/*
+    let age = 20
+    let isHuman = true
+*/
+    // as mesmas informações agrupadas
+
+    let age, isHuman
+
+    age = 44
+    isHuman = true
+
+    // informações agrupadas na função log *multiplos argumentos*
+    // console.log(name, age, isHuman)
+    
+    // escrita de texto + variáveis
+    // concatenando valores
+    // console.log('o ' + name + ' tem ' + age + ' anos.')
+
+    // interpolando valores com template literals or template strings
+    console.log(`o ${name} tem ${age} anos.`)
+
+</script>
